--- a/index.html
+++ b/index.html
@@ -2,14 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <title>DropBox</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- INIZIO HEADER -->
+        <!-- BARRA DI NAVIGAZIONE -->
+        <nav class="nav-header clearfix">
+            <div class="nav-header-left float">
+                <ul>
+                    <li><a href="#"><img src="img/logo-small.png" alt=""></a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e prezzi</a></li>
+                </ul>
+            </div>
+            <div class="nav-header-right float">
+                <ul>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta Ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                    <li><a href="#">Inizia</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!--  INIZIO CONTENUTO HERO -->
+        <section class="header_section container-large">
+            <div>
+                <h1></h1>
+            </div>
+            <div>
+                <p></p>
+                <a href="#"></a>
+                <span></span>
+                <div></div>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </section>
+        <!-- FINE CONTENUTO HERO -->
     <main></main>
     <footer></footer>
     
