--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
                     <input type="radio" name="fatt" id="fattann" value="fatturaann">
                     <label for="fattann">Fatturazione annuale</label>
             </form>
+
+            <div class="main-col-uno col_3_9 float">
+                <div class="uno-a">
+                    <div class="uno-ab">
+                        Singolo
+                    </div>
+                    
+                </div>
+            </div>
+
+            <div class="main-col-due col_3_9 float">
+                <div class="due-a">aa</div>
+            </div>
+
+            <div class="main-col-tre col_3_9 float">
+                <div class="tre-a">aa</div>
+            </div>
         </div>
         <div class="container">
             
