created three colums

--- a/index.html
+++ b/index.html
@@ -60,19 +60,89 @@
 
             <div class="main-col-uno col_3_9 float">
                 <div class="uno-a">
-                    <div class="uno-ab">
-                        Singolo
-                    </div>
-                    
-                </div>
+                    <div class="uno"><i class="far fa-user"></i> Singolo</div>
+                    <div class="due">
+                        <div class="tre">
+                            <h3>Professional</h3>
+                            <h5>19,99 €</h5>
+                            <p>/mese</p>
+                        </div>
+                        <ul class="quattro">
+                            <li><i class="far fa-user"></i> 1 Utente</li>
+                            <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro  </li>
+                            <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            <li><a href="#" class="link-blu link-uno">Prova gratis per 30 giorni</a></li>
+                        </ul>
+                        <p class="quattro">oppure<a href="#" class="link-due">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <ul>
+                            <li><i class="fas fa-check"></i> Invia file fino a 100GB con Dropbox Trasfert</li>
+                            <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili </li>
+                            <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                            <li><i class="fas fa-check"></i> Filigrana documento</li>
+                            <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                        </ul>
+                    </div>                     
+                </div>   
             </div>
 
-            <div class="main-col-due col_3_9 float">
-                <div class="due-a">aa</div>
+            <div class="main-col-uno col_3_9 float">
+                <div class="uno-a">
+                    <div class="uno"><i class="far fa-user"></i> Singolo</div>
+                    <div class="due">
+                        <div class="tre">
+                            <h3>Professional</h3>
+                            <h5>19,99 €</h5>
+                            <p>/mese</p>
+                        </div>
+                        <ul class="quattro">
+                            <li><i class="far fa-user"></i> 1 Utente</li>
+                            <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro  </li>
+                            <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            <li><a href="#" class="link-blu link-uno">Prova gratis per 30 giorni</a></li>
+                        </ul>
+                        <p class="quattro">oppure<a href="#" class="link-due">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <ul>
+                            <li><i class="fas fa-check"></i> Invia file fino a 100GB con Dropbox Trasfert</li>
+                            <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili </li>
+                            <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                            <li><i class="fas fa-check"></i> Filigrana documento</li>
+                            <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                        </ul>
+                    </div>                     
+                </div>   
             </div>
-
-            <div class="main-col-tre col_3_9 float">
-                <div class="tre-a">aa</div>
+            
+            <div class="main-col-uno col_3_9 float">
+                <div class="uno-a">
+                    <div class="uno"><i class="far fa-user"></i> Singolo</div>
+                    <div class="due">
+                        <div class="tre">
+                            <h3>Professional</h3>
+                            <h5>19,99 €</h5>
+                            <p>/mese</p>
+                        </div>
+                        <ul class="quattro">
+                            <li><i class="far fa-user"></i> 1 Utente</li>
+                            <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro  </li>
+                            <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            <li><a href="#" class="link-blu link-uno">Prova gratis per 30 giorni</a></li>
+                        </ul>
+                        <p class="quattro">oppure<a href="#" class="link-due">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <ul>
+                            <li><i class="fas fa-check"></i> Invia file fino a 100GB con Dropbox Trasfert</li>
+                            <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili </li>
+                            <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                            <li><i class="fas fa-check"></i> Filigrana documento</li>
+                            <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                        </ul>
+                    </div>                     
+                </div>   
             </div>
         </div>
         <div class="container">
