compltetata grigli partner

--- a/index.html
+++ b/index.html
@@ -212,8 +212,45 @@
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea,modifica e condividi contenuti cloud da Documenti Fogli e Preseentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox. </p>
                     </div>
                 </div>
-
             </section>
+            <!-- SEZIONE SCOPRI DI PIù -->
+            <section class="main-section-five">
+                <div class="main-section-five-a container">
+                    <div class="five-a col_6_9">
+                        <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    </div>
+                    <a href="#" class="link-due">Scopri di più sui nostri clienti</a>
+                </div>
+            </section>
+        </div>
+
+        <div class="main-container-two">
+                <!-- SECTION PARTNER -->
+            <section class="main-section-six clearfix">
+                <div class="six-a float">
+                    <div class="square green"><img class="ff" src="img/designit.svg" alt="#"></div>
+                    <div class="square purple"><img src="img/arizona_state_university.svg" alt="#"></div>
+                    <div class="square blue"><img src="img/university_of_florida.svg" alt="#"></div>
+                    <div class="square red"><img src="img/topps.svg" alt="#"></div>
+                </div>
+                <div class="six-b float">
+                    <div class="six-b-one">
+                        <img src="img/designit.svg" alt="#">
+                    </div>
+                    <hr>
+                    <div>
+                        <p>"I membri del nostro team lavorano costantemente in paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna é facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna é facile quanto Dropbox e Dropbox Paper. <br><br><br>Morten Thomsen,Global IT Lead "</p>
+                    </div>   
+                </div>
+                <div class="six-c float">
+                    <div class="square redtwo"><img src="img/world_bicycle_relief.svg" alt="#"></div>
+                    <div class="square bluetwo"><img src="img/hearst_corp.svg" alt="#"></div>
+                    <div class="square bluethree"><img src="img/lonely_planet.svg" alt="#"></div>
+                    <div class="square yellow"><img src="img/clear_channel.svg   " alt="#"></div>
+                </div>
+          
+            </section>
+
         </div>
        
     </main>
