modified sezione domande frequenti

--- a/index.html
+++ b/index.html
@@ -261,24 +261,47 @@
                 </div>
             </section>
             <!-- SEZIONE DOMANDE FREQUENTI -->
-            <section class="main-section-eight">
-                <div class="main-section-eight container">
-                    <div class="main-section-eight-a">
-                        <h3>Domande frequnti</h3>
-                    </div>
-                    <div class="main-section-eight-ab">
-                        <h6>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance? <i class="fas fa-chevron-down"></i></h6>              
-                    </div>
-                    <div class="main-section-eight-ab">
-                        <h6>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance? <i class="fas fa-chevron-down"></i></h6>              
-                    </div>
-                    <div class="main-section-eight-ab">
-                        <h6>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance? <i class="fas fa-chevron-down"></i></h6>              
-                    </div>
-                    <div class="main-section-eight-ab">
-                        <h6>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance? <i class="fas fa-chevron-down"></i></h6>              
-                    </div>
-                </div>
+            <section class="main-section-eight container">
+
+                <h3>Domande frequenti</h3>
+                <ul class="main-section-eight list">
+                    <li class="list-a" tabindex="0">
+                        <h6>
+                            <span>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance?</span>
+                            <i class="fas fa-chevron-down list-a-icon"></i>
+                        </h6>
+                        <div class="list-content">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A rerum deserunt eaque magni explicabo maxime veritatis velit ipsum alias, deleniti ratione dolor voluptates voluptate similique neque ipsa? Perferendis, enim? Neque?</p>
+                        </div>
+                    </li>
+                    <li class="list-a" tabindex="0">
+                        <h6>
+                            <span>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance?</span>
+                            <i class="fas fa-chevron-down list-a-icon"></i>
+                        </h6>
+                        <div class="list-content">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A rerum deserunt eaque magni explicabo maxime veritatis velit ipsum alias, deleniti ratione dolor voluptates voluptate similique neque ipsa? Perferendis, enim? Neque?</p>
+                        </div>
+                    </li>
+                    <li class="list-a" tabindex="0">
+                        <h6>
+                            <span>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance?</span>
+                            <i class="fas fa-chevron-down list-a-icon"></i>
+                        </h6>
+                        <div class="list-content">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A rerum deserunt eaque magni explicabo maxime veritatis velit ipsum alias, deleniti ratione dolor voluptates voluptate similique neque ipsa? Perferendis, enim? Neque?</p>
+                        </div>
+                    </li>
+                    <li class="list-a" tabindex="0">
+                        <h6>
+                            <span>Quale è la differenza tra Dropbox Standard e Dropbox Business Advance?</span>
+                            <i class="fas fa-chevron-down list-a-icon"></i>
+                        </h6>
+                        <div class="list-content">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A rerum deserunt eaque magni explicabo maxime veritatis velit ipsum alias, deleniti ratione dolor voluptates voluptate similique neque ipsa? Perferendis, enim? Neque?</p>
+                        </div>
+                    </li>
+                </ul>  
             </section>
         </div>
     </main>
