--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Trova il piano Dropbox Business che fa per te</h2>
                 <form class="main-form">
                         <input type="radio" name="fatt" id="fattmen" value="fatturamen">
-                        <label for="fattmen">Fatturazione mensile</label>
+                        <label for="fattmen" style="margin-right: 20px;">Fatturazione mensile</label>
         
                         <input type="radio" name="fatt" id="fattann" value="fatturaann">
                         <label for="fattann">Fatturazione annuale</label>
@@ -160,7 +160,7 @@
                         <h3>Enterprise</h3>
                         <h4>Contatta l' ufficio vendite per i prezzi</h4>
                         <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
-                        <a href="#" class="link-blu link-contact">Prova gratis per 30 giorni</a>
+                        <a href="#" class="link-blu link-contact">Contatta l'ufficio vendite</a>
                     </div>
                 </div>
             </section>
